--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>That one who has a diffrent queston imposter game | PennBrennFun</title>
+<title>That one game where you have to find out who has a diffrent question | PennBrennFun</title>
 <link rel="icon" type="image/png" href="play.png">
+<meta name="description" content="Each player gets a question and answers it in their head. Pass the device around. When everyone gets their question, they go around answering. DO NOT TALK UNTIL AFTER THE REAL QUESTION IS REVEALED. Then the real question is shown. Players guess who the imposter is. Justify your answer — even if you’re the imposter. Once the imposter is revealed, everyone shares their question. A moderator can view the real and imposter questions at the end.">
 <style>
   :root {
     --bg: #0b0f14;
@@ -179,10 +180,21 @@ const data = {
     { real: "What should minimum wage be", imposter: "About how many coins have you picked up in your life" },
     { real: "About what is the value of the most expensive thing youve held", imposter: "How much do you think a 2009 toyota camry costs" },
     { real: "About how many books have you read", imposter: "When will you die" },
+    { real: "Whats the perfect amount of shirts in a wardrobe", imposter: "how many dates have you been on ever" },
+    { real: "Whats the lowest amount of money to be paid to crack a random person in the world", imposter: "About how much money have you ever spent" },
+    { real: "How many hours of sleep do you usually get", imposter: "How many times do you jerk off a week" },
+    { real: "What age would you like to die", imposter: "How old is too old" },
+    { real: "How old is too old (as of now)", imposter: "Pick any number 0-100 (lower is best)" },
+    { real: "What do you think is the average fluid volume of a nut", imposter: "how much water do you drink a day" },
+    { real: "What is the biggest number you know", imposter: "What is the biggest number you can count to" },
     { real: "How many times have you scrolled past something that turned you on", imposter: "How often do you get in a car in a week" }
+
   ],
   answer: [
     { real: "What is the best spot to sit in the class", imposter: "Where does the teachers pet sit" },
+    { real: "What is the best pastime", imposter: "What do you do when youre bored" },
+    { real: "Where do you see yourself in 5 years", imposter: "Whats a job you hate but makes good money" },
+    { real: "What is the best type of porn", imposter: "Name a weird fetish" },
     { real: "What is a reason to kill yourself", imposter: "What makes you want to jerk off" },
     { real: "What is your least favorite class", imposter: "What is the most fun class this year" },
     { real: "If there was a fire, what would you save first", imposter: "What is your favorite food" },
@@ -218,6 +230,16 @@ const data = {
     { real: "Make a shitty joke", imposter: "Make the gayest joke ever" },
     { real: "What is the most valuable thing youve held", imposter: "Name something expensive" },
     { real: "Name the last video you remember watching (can be porn)", imposter: "Make a name for a porn video" },
+    { real: "What movie has the most attractive actor/actresses", imposter: "Name any animated movie" },
+    { real: "If you could live any country, where would it be", imposter: "What country would you go to flee from the immortal snail" },
+    { real: "What do you look for in a significant other", imposter: "Whats a body part is your least favorite fetish" },
+    { real: "How long does it take you to finish", imposter: "How long would you spend at any target or walmart” },
+    { real: "Whats something you hate about yourself", imposter: "Name any body part/organ" },
+    { real: "Who around you probably has the biggest dick", imposter: "Who around you probably is thinking about getting cracked" },
+    { real: "Who around you probably is the most gay", imposter: "Who around you probably likes feet " },
+    { real: "What is the best restaurant", imposter: "What is the dirtiest restaurant chain you've been to" },
+    { real: "What would you do if you had to do it for a week straight", imposter: "Whats something you hate watching people do" },
+    { real: "Whats your favorite way to pass time", imposter: "What did you do yesterday" },
     { real: "What is the weirdest thing someone probably shoved up their ass", imposter: "name something long and hard that isnt a cock" }
   ]
 };
