--- a/index.html
+++ b/index.html
@@ -202,7 +202,58 @@ const data = {
     { real: "What’s a food you genuinely can’t stand?", imposter: "What’s a food you could eat every day?" },
     { real: "What’s something that instantly improves your mood?", imposter: "What’s something that instantly ruins your mood?" },
     { real: "What kind of music do you play when you’re alone?", imposter: "What kind of music do you play for guests?" },
-    { real: "If you had to teach a class, what subject would it be?", imposter: "If you had to take a class again, what subject would it be?" }
+    { real: "If you had to teach a class, what subject would it be?", imposter: "If you had to take a class again, what subject would it be?" },
+    { real: "What is the best spot to sit in the class", imposter: "Where does the teachers pet sit" },
+    { real: "What is the best pastime", imposter: "What do you do when youre bored" },
+    { real: "Where do you see yourself in 5 years", imposter: "Whats a job you hate but makes good money" },
+    { real: "What is the best type of porn", imposter: "Name a weird fetish" },
+    { real: "What is a reason to kill yourself", imposter: "What makes you want to jerk off" },
+    { real: "What is your least favorite class", imposter: "What is the most fun class this year" },
+    { real: "If there was a fire, what would you save first", imposter: "What is your favorite food" },
+    { real: "What is the best thing youve ever eaten", imposter: "What is your favorite farm animal" },
+    { real: "What is the gayest thing a person can do without being gay", imposter: "What is the freakiest thing you saw someone do" },
+    { real: "What is the worst thing you saw while scrolling", imposter: "What is the most brainrotted thing you saw while scrolling" },
+    { real: "What is the weirdest kink youve heard of", imposter: "What is the most justifiable kink you know" },
+    { real: "What are you gonna do in a active shooting", imposter: "Where would you hide to escape a rapist in school" },
+    { real: "Whats your favorite candy", imposter: "What is the worst candy ever" },
+    { real: "What is your favorite color that isnt well known (eg brownish-red, maroon", imposter: "What shade do you not want your shit to be" },
+    { real: "What is the worst candy ever", imposter: "Whats your favorite candy" },
+    { real: "Whats your favorite place to doomscroll", imposter: "Whats your favorite place to goon" },
+    { real: "Whats your favorite place to eat dinner", imposter: "Whats your favorite place to sit" },
+    { real: "Where would you wanna die", imposter: "Whats your favorite place to jerk off" },
+    { real: "Explain how red feels to you (Dont say the color)", imposter: "Explain how blue feels to you (Dont say the color)" },
+    { real: "Explain how pink feels to you (Dont say the color)", imposter: "Explain how black feels to you (Dont say the color)" },
+    { real: "Explain how black feels to you (Dont say the color)", imposter: "Explain how white feels to you (Dont say the color)" },
+    { real: "If it was 2001, where would you want to be when the towers fell", imposter: "What class would you want to skip" },
+    { real: "Name a underrated car", imposter: "Name a really really bad car" },
+    { real: "Whats the best way to die", imposter: "What is the most gruesome car crash you can imagine (come up with a fake scenario)" },
+    { real: "Name a underrated food", imposter: "Name a " },
+    { real: "Name a really good candy", imposter: "Name a " },
+    { real: "Name a element", imposter: "Pick one: Rhedynium, Hexium, Yelium, Partnium" },
+    { real: "Name something edible", imposter: "Name a school supply you always carry" },
+    { real: "Name your favorite show", imposter: "Name the first show you remember watching" },
+    { real: "Name a lighting technology: (eg. Filament, LED, ect.", imposter: "Name a way to light a home that isnt common." },
+    { real: "Whats your favorite car (If you dont know say a brand)", imposter: "Whats the worst car (If you dont know say a brand)" },
+    { real: "What is your favorite game", imposter: "Name a freaky game" },
+    { real: "What is the best spot in school", imposter: "Where would you plant a bomb in school" },
+    { real: "Where is the worst place to be in an earthquake", imposter: "Where are you going to be in about a hour" },
+    { real: "Best sex position", imposter: "Name an object that sounds like a sex position" },
+    { real: "What is the best meme ever", imposter: "What is the last meme you saw" },
+    { real: "Make a shitty joke", imposter: "Make the gayest joke ever" },
+    { real: "What is the most valuable thing youve held", imposter: "Name something expensive" },
+    { real: "Name the last video you remember watching (can be porn)", imposter: "Make a name for a porn video" },
+    { real: "What movie has the most attractive actor/actresses", imposter: "Name any animated movie" },
+    { real: "If you could live any country, where would it be", imposter: "What country would you go to flee from the immortal snail" },
+    { real: "What do you look for in a significant other", imposter: "Whats a body part is your least favorite fetish" },
+    { real: "How long does it take you to finish", imposter: "How long would you spend at any target or walmart” },
+    { real: "Whats something you hate about yourself", imposter: "Name any body part/organ" },
+    { real: "Who around you probably has the biggest dick", imposter: "Who around you probably is thinking about getting cracked" },
+    { real: "Who around you probably is the most gay", imposter: "Who around you probably likes feet " },
+    { real: "What is the best restaurant", imposter: "What is the dirtiest restaurant chain you've been to" },
+    { real: "What would you do if you had to do it for a week straight", imposter: "Whats something you hate watching people do" },
+    { real: "Whats your favorite way to pass time", imposter: "What did you do yesterday" },
+    { real: "What is the weirdest thing someone probably shoved up their ass", imposter: "name something long and hard that isnt a cock" }
+
   ]
 };
 
