--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>That one game where you have to find out who has a different question</h1>
+    <h1>That one game where you have to find out who has a different question | PennBrennFun</h1>
     <p class="lead">
       Each player gets a question and answers it in their head.<br>
       Pass the device around.<br><br>
