--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@ const data = {
     { real: "How old is too old (as of now)", imposter: "Pick any number 0-100 (lower is best)" },
     { real: "What do you think is the average fluid volume of a nut", imposter: "how much water do you drink a day" },
     { real: "What is the biggest number you know", imposter: "What is the biggest number you can count to" },
-    { real: "How many times have you scrolled past something that turned you on", imposter: "How often do you get in a car in a week" }
+    { real: "How many times have you scrolled past something that turned you on", imposter: "How often do you get in a car in a week" },
+    { real: "You are the imposter pick any number", imposter: "You are the imposter pick any number" }
 
   ],
   answer: [
