--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <style>
   :root {
-    --bg: #0b0f14;
-    --panel: #141b24;
-    --muted: #9aa6b2;
-    --accent: #7ce7ff;
+    --bg: #1b1b1b;
+    --panel: #292929;
+    --muted: #808080;
+    --accent: #ffa31a;
     --text: #ffffff;
     --danger: #ff6b6b;
   }
@@ -180,7 +180,7 @@ const data = {
     { real: "What should the age of consent be changed to", imposter: "Pick any number (lower is better)" },
     { real: "What is a good amount of times to masturbate a week", imposter: "How many times do you piss a week" },
     { real: "Quick! Guess the answer: 1293*5238", imposter: "How much money is livable wage (say a number, NOT SIX FIGURES OR SIMALAR)" },
-    { real: "How much money would you suck a dick for (dont say infinite or no)", imposter: "How much money would you crack for (dont say infinite or no)" },
+    { real: "How much money would you suck the person on your lefts dick for (dont say infinite or no)", imposter: "How much money would you crack the person to the left for (dont say infinite or no)" },
     { real: "How many spoons to drink a glass of water", imposter: "You are the imposter, pick a number (hint: How many spoons to drink...)" },
     { real: "What time is good for gooning", imposter: "What time do you go to bed" },
     { real: "At what age do you think you would want to have sex", imposter: "Pick a number under 50" },
@@ -190,12 +190,16 @@ const data = {
     { real: "Whats the perfect amount of shirts in a wardrobe", imposter: "how many dates have you been on ever" },
     { real: "Whats the lowest amount of money to be paid to crack a random person in the world", imposter: "About how much money have you ever spent" },
     { real: "How many hours of sleep do you usually get", imposter: "How many times do you jerk off a week" },
+    { real: "How many femboys would you crack for 20$ each", imposter: "How many times do you jerk off a week" },
     { real: "What age would you like to die", imposter: "How old is too old" },
     { real: "How old is too old (as of now)", imposter: "Pick any number 0-100 (lower is best)" },
     { real: "What do you think is the average fluid volume of a nut", imposter: "how much water do you drink a day" },
     { real: "What is the biggest number you know", imposter: "What is the biggest number you can count to" },
     { real: "How many times have you scrolled past something that turned you on", imposter: "How often do you get in a car in a week" },
-    { real: "You are the imposter pick any number", imposter: "You are the imposter pick any number" }
+    { real: "You are the imposter pick any number", imposter: "You are the imposter pick any number" },
+    { real: "On a scale of 1-10 how would you rate the person to your left (If you were into that)", imposter: "Shes a 10 but she is clingy" },
+    { real: "How much money have you spent on onlyfans", imposter: "How much money have you spent on boba in the last week" },
+    { real: "How many countries have you traveled to", imposter: "What grade did you get on your last test (not precent)" }
 
   ],
   answer: [
@@ -246,15 +250,15 @@ const data = {
     { real: "What movie has the most attractive actor/actresses", imposter: "Name any animated movie" },
     { real: "If you could live any country, where would it be", imposter: "What country would you go to flee from the immortal snail" },
     { real: "What do you look for in a significant other", imposter: "Whats a body part is your least favorite fetish" },
-
+    { real: "How many hours of sleep do you usually get", imposter: "How many times do you jerk off a week" },
     { real: "Whats something you hate about yourself", imposter: "Name any body part/organ" },
     { real: "Who around you probably has the biggest dick", imposter: "Who around you probably is thinking about getting cracked" },
     { real: "Who around you probably is the most gay", imposter: "Who around you probably likes feet " },
     { real: "What is the best restaurant", imposter: "What is the dirtiest restaurant chain you've been to" },
     { real: "What would you do if you had to do it for a week straight", imposter: "Whats something you hate watching people do" },
     { real: "Whats your favorite way to pass time", imposter: "What did you do yesterday" },
+    { real: "Would you place a bomb somewhere, or get 1B dollars", imposter: "Whats your favorite goverment building" },
     { real: "What is the weirdest thing someone probably shoved up their ass", imposter: "name something long and hard that isnt a cock" }
-
   ]
 };
 
