--- a/sfw.html
+++ b/sfw.html
@@ -11,10 +11,10 @@
 <style>
   :root {
     --bg: #f2f4f5;
-    --panel: #292929;
+    --panel: #c3cdd4;
     --muted: #445866;
     --accent: #03121c;
-    --text: #000000;
+    --text: #ffffff;
     --danger: #ff6b6b;
   }
   html, body {
