--- a/sfw.html
+++ b/sfw.html
@@ -13,7 +13,7 @@
     --bg: #f2f4f5;
     --panel: #c3cdd4;
     --muted: #445866;
-    --accent: #03121c;
+    --accent: #011524;
     --text: #ffffff;
     --danger: #ff6b6b;
   }
