--- a/sfw.html
+++ b/sfw.html
@@ -12,7 +12,7 @@
   :root {
     --bg: #f2f4f5;
     --panel: #c3cdd4;
-    --muted: #445866;
+    --muted: #20282e;
     --accent: #011524;
     --text: #ffffff;
     --danger: #ff6b6b;
