--- a/sfw.html
+++ b/sfw.html
@@ -14,7 +14,7 @@
     --panel: #c3cdd4;
     --muted: #20282e;
     --accent: #011524;
-    --text: #ffffff;
+    --text: #0000000;
     --danger: #ff6b6b;
   }
   html, body {
