--- a/sfw.html
+++ b/sfw.html
@@ -13,7 +13,7 @@
     --bg: #f2f4f5;
     --panel: #c3cdd4;
     --muted: #20282e;
-    --accent: #011524;
+    --accent: #415d70;
     --text: #0000000;
     --danger: #ff6b6b;
   }
