--- a/sfw.html
+++ b/sfw.html
@@ -165,7 +165,27 @@
 // -----------------------------
 const data = {
   number: [
-    { real: "hi", imposter: "bye" },
+    { real: "How many pieces of jewlery do you have", imposter: "How many pairs of pants do you have" },
+    { real: "How many girlfriends/boyfriends have you had", imposter: "Pick a negative number" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+    { real: "x", imposter: "y" },
+
     { real: "1", imposter: "2" }
   ],
   answer: [
